@@ -63,6 +63,8 @@ protected:
 
    static const char *SocketNumericAddress(const sockaddr_u *u);
    static int SocketPort(const sockaddr_u *u);
+   static socklen_t SocketAddrLen(const sockaddr_u *u);
+   static int SocketConnect(int fd,const sockaddr_u *u);
 
    char	 *proxy;
    char	 *proxy_port;
