@@ -830,9 +830,7 @@ int   Ftp::Do()
 
       SayConnectingTo();
 
-      res=connect(control_sock,&peer_sa.sa,sizeof(peer_sa));
-      UpdateNow(); // if non-blocking don't work
-
+      res=SocketConnect(control_sock,&peer_sa);
       if(res==-1
 #ifdef EINPROGRESS
       && errno!=EINPROGRESS
@@ -1351,9 +1349,7 @@ int   Ftp::Do()
 	    SocketNumericAddress(&data_sa),SocketPort(&data_sa));
 	 DebugPrint("---- ",str,3);
 
-	 res=connect(data_sock,(struct sockaddr*)&data_sa,sizeof(data_sa));
-	 UpdateNow(); // if non-blocking don't work
-
+	 res=SocketConnect(data_sock,&data_sa);
 	 if(res==-1
 #ifdef EINPROGRESS
 	 && errno!=EINPROGRESS
